trunk/Archive2/05/92403604ed2f1b/output
main.cpp: In function 'int principal()':
main.cpp:5:13: error: expected primary-expression before 'int'
     para  ( int i =  0 ; i <  10 ; i ++ )  { 
             ^
main.cpp:5:26: error: 'i' was not declared in this scope
     para  ( int i =  0 ; i <  10 ; i ++ )  { 
                          ^
main.cpp:5:41: error: expected ';' before ')' token
     para  ( int i =  0 ; i <  10 ; i ++ )  { 
                                         ^
main.cpp:10:22: error: unknown escape sequence: '\040'
     std :: cout  <<  " \ n " ;
                      ^
main.cpp:12:13: error: expected primary-expression before 'int'
     para  ( int j =  0 ; j <  2 ; j ++ )  { 
             ^
main.cpp:12:26: error: 'j' was not declared in this scope
     para  ( int j =  0 ; j <  2 ; j ++ )  { 
                          ^
main.cpp:12:40: error: expected ';' before ')' token
     para  ( int j =  0 ; j <  2 ; j ++ )  { 
                                        ^
main.cpp:18:1: error: expected '}' at end of input
 }
 ^
main.cpp:18:1: warning: no return statement in function returning non-void [-Wreturn-type]
